add ResourceAssembler